# xai_project

./: .gitignore  README.md  c51.py  c51_eval.py  c51_rules_eval.py  c51_rules_training.py  c51rt_eval.py  config.py  convergence_8x8_parameters.txt  pyproject.toml  requirements.txt
minigrid/: .gitignore  OLD_c51_rules_v2.py  README.md  c51_plot.py  c51_rules.py  c51_rulesV2.py  c51_rulesV2a.py  c51_rulesV3.py  c51_rules_exploitation_only.py  c51_rules_exploration_only.py  c51_rules_more_actions.py  c51_rules_plot.py  c51_rules_v2.py  config.py  config_sac.py  convergence_8x8_1key_parameters.txt  doorkey.py  dqn.py  pyproject.toml  sac.py
minigrid/C51rulesV2a/MiniGrid-DoorKey-8x8-v0_C51rules_6000000_2025_07_18-14_16_06/: C51rules_args.txt
minigrid/C51rulesV2a/runs_rules_training/C51rulesV2a_MiniGrid-DoorKey-8x8-v0__seed6__2025_07_18-13_31_18/train/: events.out.tfevents.1752838280.fedora.12977.0
minigrid/C51rulesV3/MiniGrid-DoorKey-8x8-v0_C51rules_6000000_2025_07_17-04_14_44/: C51rules_args.txt
minigrid/C51rulesV3/MiniGrid-DoorKey-8x8-v0_C51rules_6000000_2025_07_17-06_01_23/: C51rules_args.txt
minigrid/baseC51/: c51_eval.py
minigrid/rules_in_training/: c51_rules_training.py  c51_rules_training_v2.py  c51_rules_training_v2_EXP_EXP.py  c51_rules_training_v2_EXP_ONLY.py  c51_rules_training_v2_ws.py  c51_rules_training_v2a.py  c51_rules_training_v3.py  c51_rules_training_v3_sum.py  c51_rules_training_v3_sum_2x_eps.py  c51_rules_training_v3_sum_eps_EXP_EXP.py  c51_rules_training_v3_sum_eps_EXP_EXP_test.py  c51_rules_training_v3_sum_eps_EXP_ONLY.py
(+904 files in other folders)
